--- a/examples/demonstration/1.2 demo_DGPRCTExt.ipynb
+++ b/examples/demonstration/1.2 demo_DGPRCTExt.ipynb
@@ -97,6 +97,27 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jinningwang/.andes/pycode/PVD1.py:112: RuntimeWarning: invalid value encountered in reciprocal\n",
+      "  return ((-ft0 + ft1)**(-1.0))\n",
+      "/Users/jinningwang/.andes/pycode/PVD1.py:115: RuntimeWarning: invalid value encountered in reciprocal\n",
+      "  return ((-ft2 + ft3)**(-1.0))\n",
+      "/Users/jinningwang/.andes/pycode/PVD1.py:118: RuntimeWarning: invalid value encountered in reciprocal\n",
+      "  return ((-vt0 + vt1)**(-1.0))\n",
+      "/Users/jinningwang/.andes/pycode/PVD1.py:121: RuntimeWarning: invalid value encountered in reciprocal\n",
+      "  return ((-vt2 + vt3)**(-1.0))\n",
+      "TGOV1.LAG_lim at limits <VMIN>\n",
+      "\n",
+      "  idx    | Flag | Input Value | Limit\n",
+      "---------+------+-------------+------\n",
+      " TGOV1_2 | zl   | 0.300       | 0.300\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
@@ -141,71 +162,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TGOV1.LAG_lim at limits <VMIN>\n",
-      "\n",
-      "  idx    | Flag | Input Value | Limit\n",
-      "---------+------+-------------+------\n",
-      " TGOV1_2 | zl   | 0.300       | 0.300\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                          | 0/100 [00:00<?, ?%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 25%|████████                        | 25/100 [00:00<00:00, 241.69%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 50%|████████████████                | 50/100 [00:00<00:00, 186.09%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 72%|███████████████████████         | 72/100 [00:00<00:00, 197.09%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 99%|███████████████████████████████▋| 99/100 [00:00<00:00, 221.01%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|███████████████████████████████| 100/100 [00:00<00:00, 207.09%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      " 32%|██████████▏                     | 32/100 [00:00<00:00, 534.08%/s]\n"
      ]
     },
     {
@@ -304,71 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                          | 0/100 [00:00<?, ?%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 26%|███████▊                      | 26.0/100 [00:00<00:00, 249.65%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 51%|███████████████▎              | 51.0/100 [00:00<00:00, 124.01%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 67%|████████████████████▊          | 67.0/100 [00:00<00:00, 90.03%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 79%|████████████████████████▍      | 79.0/100 [00:00<00:00, 76.44%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 88%|███████████████████████████▎   | 88.0/100 [00:01<00:00, 67.63%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 96%|█████████████████████████████▊ | 96.0/100 [00:01<00:00, 65.73%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|██████████████████████████████| 100.0/100 [00:01<00:00, 76.65%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|█████████████████████████████| 100.0/100 [00:00<00:00, 196.16%/s]\n"
      ]
     },
     {
@@ -444,31 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                          | 0/100 [00:00<?, ?%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 51%|███████████████▎              | 51.0/100 [00:00<00:00, 497.98%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "100%|██████████████████████████████| 100.0/100 [00:02<00:00, 42.24%/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|█████████████████████████████| 100.0/100 [00:00<00:00, 115.99%/s]\n"
      ]
     },
     {
@@ -894,8 +766,8 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.2.post116.dev0+g832274a7\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 09/26/2021 05:42:00 PM\r\n",
+      "    _           _         | Version 1.4.2.post167.dev0+g979860fe\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 03:40:41 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
@@ -913,8 +785,9 @@
    "hash": "b2f979d891be15b14f4332b6eed75a0475160d17003978b44c1d0bc62ad71649"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit (conda)",
-   "name": "python3"
+   "display_name": "andes",
+   "language": "python",
+   "name": "andes"
   },
   "language_info": {
    "codemirror_mode": {
@@ -926,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.10"
   },
   "metadata": {
    "interpreter": {
