--- a/examples/demonstration/1.1 demo_DGPRCT1.ipynb
+++ b/examples/demonstration/1.1 demo_DGPRCT1.ipynb
@@ -158,7 +158,7 @@
      "text": [
       "<Toggler 1>: StaticLoad.PQ_12 status changed to 1 at t=1.0 sec.       \n",
       "<Toggler 2>: StaticLoad.PQ_12 status changed to 0 at t=10.0 sec.      \n",
-      "100%|████████████████████████████████| 100/100 [00:04<00:00, 24.85%/s]\n"
+      "100%|████████████████████████████████| 100/100 [00:03<00:00, 25.15%/s]\n"
      ]
     },
     {
@@ -584,13 +584,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r\n",
-      "    _           _         | Version 1.4.2.post167+g979860fe\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 03:39:54 PM\r\n",
-      "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
-      " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
-      "\r\n",
-      "No output file found in the working directory.\r\n"
+      "\n",
+      "    _           _         | Version 1.4.2.post168.dev0+gf781733e\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 04:42:24 PM\n",
+      "  / _ \\| ' \\/ _` / -_|_-< | \n",
+      " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\n",
+      "\n",
+      "No output file found in the working directory.\n"
      ]
     }
    ],
@@ -604,9 +604,9 @@
    "hash": "b2f979d891be15b14f4332b6eed75a0475160d17003978b44c1d0bc62ad71649"
   },
   "kernelspec": {
-   "display_name": "andes",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "andes"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
