--- a/examples/demonstration/1.2 demo_DGPRCTExt.ipynb
+++ b/examples/demonstration/1.2 demo_DGPRCTExt.ipynb
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 32%|██████████▏                     | 32/100 [00:00<00:00, 534.08%/s]\n"
+      " 32%|██████████▏                     | 32/100 [00:00<00:00, 539.99%/s]\n"
      ]
     },
     {
@@ -264,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████| 100.0/100 [00:00<00:00, 196.16%/s]\n"
+      "100%|█████████████████████████████| 100.0/100 [00:00<00:00, 195.80%/s]\n"
      ]
     },
     {
@@ -340,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████| 100.0/100 [00:00<00:00, 115.99%/s]\n"
+      "100%|█████████████████████████████| 100.0/100 [00:00<00:00, 113.65%/s]\n"
      ]
     },
     {
@@ -766,8 +766,8 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.2.post167.dev0+g979860fe\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 03:40:41 PM\r\n",
+      "    _           _         | Version 1.4.2.post168.dev0+gf781733e\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 04:44:08 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
@@ -785,9 +785,9 @@
    "hash": "b2f979d891be15b14f4332b6eed75a0475160d17003978b44c1d0bc62ad71649"
   },
   "kernelspec": {
-   "display_name": "andes",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "andes"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
