--- a/examples/demonstration/2.2 demo_IEEET3.ipynb
+++ b/examples/demonstration/2.2 demo_IEEET3.ipynb
@@ -48,8 +48,8 @@
       "Loaded config from file \"/Users/jinningwang/.andes/andes.rc\"\n",
       "Loaded generated Python code in \"~/.andes/pycode\".\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_ieeet3.xlsx\"...\n",
-      "Input file parsed in 0.4487 seconds.\n",
-      "System internal structure set up in 0.0214 seconds.\n"
+      "Input file parsed in 0.4544 seconds.\n",
+      "System internal structure set up in 0.0229 seconds.\n"
      ]
     },
     {
@@ -110,8 +110,8 @@
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.967745825e-12\n",
-      "Converged in 4 iterations in 0.0090 seconds.\n",
-      "Initialization for dynamics completed in 0.0218 seconds.\n",
+      "Converged in 4 iterations in 0.0076 seconds.\n",
+      "Initialization for dynamics completed in 0.0203 seconds.\n",
       "Initialization was successful.\n"
      ]
     },
@@ -159,14 +159,14 @@
      "text": [
       "<Toggler Toggler_1>: Line.Line_1 status changed to 0 at t=1.0 sec.    \n",
       "<Toggler Toggler_2>: Line.Line_1 status changed to 1 at t=1.1 sec.    \n",
-      "100%|████████████████████████████████| 100/100 [00:01<00:00, 72.26%/s]"
+      "100%|████████████████████████████████| 100/100 [00:01<00:00, 70.13%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 1.3843 seconds.\n"
+      "Simulation completed in 1.4263 seconds.\n"
      ]
     },
     {
@@ -324,8 +324,8 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.2.post167.dev0+g979860fe\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 03:42:38 PM\r\n",
+      "    _           _         | Version 1.4.2.post168.dev0+gf781733e\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/04/2021 04:45:32 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
@@ -344,9 +344,9 @@
    "hash": "4c42303ec617988e96980582546035234a0dbb343f6614254a1d5bddbb9babb9"
   },
   "kernelspec": {
-   "display_name": "andes",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "andes"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
