--- a/examples/demonstration/2.4 demo_ESST1A.ipynb
+++ b/examples/demonstration/2.4 demo_ESST1A.ipynb
@@ -37,7 +37,8 @@
      "iopub.status.busy": "2021-09-26T22:41:51.717830Z",
      "iopub.status.idle": "2021-09-26T22:41:52.415346Z",
      "shell.execute_reply": "2021-09-26T22:41:52.415616Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -48,8 +49,8 @@
       "Loaded config from file \"/Users/jinningwang/.andes/andes.rc\"\n",
       "Loaded generated Python code in \"~/.andes/pycode\".\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_esst1a.xlsx\"...\n",
-      "Input file parsed in 0.3724 seconds.\n",
-      "System internal structure set up in 0.0220 seconds.\n"
+      "Input file parsed in 0.3120 seconds.\n",
+      "System internal structure set up in 0.0222 seconds.\n"
      ]
     },
     {
@@ -110,8 +111,8 @@
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.967745825e-12\n",
-      "Converged in 4 iterations in 0.0055 seconds.\n",
-      "Initialization for dynamics completed in 0.0236 seconds.\n",
+      "Converged in 4 iterations in 0.0056 seconds.\n",
+      "Initialization for dynamics completed in 0.0226 seconds.\n",
       "Initialization was successful.\n"
      ]
     },
@@ -159,14 +160,14 @@
      "text": [
       "<Toggler Toggler_1>: Line.Line_1 status changed to 0 at t=1.0 sec.    \n",
       "<Toggler Toggler_2>: Line.Line_1 status changed to 1 at t=1.1 sec.    \n",
-      "100%|████████████████████████████████| 100/100 [00:01<00:00, 64.81%/s]"
+      "100%|████████████████████████████████| 100/100 [00:01<00:00, 65.48%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 1.5432 seconds.\n"
+      "Simulation completed in 1.5276 seconds.\n"
      ]
     },
     {
@@ -296,8 +297,8 @@
      "output_type": "stream",
      "text": [
       "\r\n",
-      "    _           _         | Version 1.4.3.post11+ga6a45e90\r\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/05/2021 08:35:38 PM\r\n",
+      "    _           _         | Version 1.4.3.post12.dev0+g4e51e20f\r\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/05/2021 10:16:54 PM\r\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \r\n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\r\n",
       "\r\n",
