--- a/examples/7. parallel-simulation.ipynb
+++ b/examples/7. parallel-simulation.ipynb
@@ -231,11 +231,11 @@
      "name": "stdout",
      "text": [
       "total 56\n",
-      "drwxr-xr-x 2 hcui7 hcui7  4096 Oct  6 09:04 .\n",
-      "drwxr-xr-x 6 hcui7 hcui7  4096 Oct  6 09:04 ..\n",
-      "-rw-r--r-- 1 hcui7 hcui7 14639 Oct  6 09:04 kundur_p_11.59.xlsx\n",
-      "-rw-r--r-- 1 hcui7 hcui7 14640 Oct  6 09:04 kundur_p_12.75.xlsx\n",
-      "-rw-r--r-- 1 hcui7 hcui7 14639 Oct  6 09:04 kundur_p_13.91.xlsx\n"
+      "drwxr-xr-x 2 hcui7 hcui7  4096 Oct  6 09:05 .\n",
+      "drwxr-xr-x 6 hcui7 hcui7  4096 Oct  6 09:05 ..\n",
+      "-rw-r--r-- 1 hcui7 hcui7 14640 Oct  6 09:05 kundur_p_11.59.xlsx\n",
+      "-rw-r--r-- 1 hcui7 hcui7 14641 Oct  6 09:05 kundur_p_12.75.xlsx\n",
+      "-rw-r--r-- 1 hcui7 hcui7 14640 Oct  6 09:05 kundur_p_13.91.xlsx\n"
      ]
     }
    ],
@@ -272,8 +272,8 @@
      "name": "stdout",
      "text": [
       "\n",
-      "    _           _         | Version 1.4.3.post10.dev0+g61fc831b\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 10/06/2021 09:04:29 AM\n",
+      "    _           _         | Version 1.4.3.post11.dev0+g66add67d\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 10/06/2021 09:05:44 AM\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\n",
       "\n",
@@ -285,8 +285,8 @@
       "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
       "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
       "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
-      "Log saved to \"/tmp/andes/andes-aaw496_i/andes.log\".\n",
-      "-> Multiprocessing finished in 1.2088 seconds.\n"
+      "Log saved to \"/tmp/andes/andes-kpztgyvw/andes.log\".\n",
+      "-> Multiprocessing finished in 1.2183 seconds.\n"
      ]
     }
    ],
@@ -332,8 +332,8 @@
      "name": "stdout",
      "text": [
       "\n",
-      "    _           _         | Version 1.4.3.post10.dev0+g61fc831b\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 10/06/2021 09:04:31 AM\n",
+      "    _           _         | Version 1.4.3.post11.dev0+g66add67d\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 10/06/2021 09:05:45 AM\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\n",
       "\n",
@@ -345,8 +345,8 @@
       "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
       "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
       "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
-      "Log saved to \"/tmp/andes/andes-kz_gwhn3/andes.log\".\n",
-      "-> Multiprocessing finished in 1.2368 seconds.\n"
+      "Log saved to \"/tmp/andes/andes-pn56rjit/andes.log\".\n",
+      "-> Multiprocessing finished in 1.2803 seconds.\n"
      ]
     }
    ],
@@ -391,15 +391,15 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
-      "\n",
-      "\n",
       "Cases are processed in the following order:\n",
       "\"kundur_p_11.59.xlsx\"\n",
       "\"kundur_p_12.75.xlsx\"\n",
       "\"kundur_p_13.91.xlsx\"\n",
-      "Log saved to \"/tmp/andes/andes-b3xha3p8/andes.log\".\n",
-      "-> Multiprocessing finished in 2.0337 seconds.\n"
+      "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
+      "\n",
+      "<Toggler 1>: Line.Line_8 status changed to 0 at t=2.0 sec.\n",
+      "Log saved to \"/tmp/andes/andes-nds9wv1c/andes.log\".\n",
+      "-> Multiprocessing finished in 2.0324 seconds.\n"
      ]
     }
    ],
@@ -427,7 +427,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<andes.system.System at 0x7f0a2e4fb4c0>"
+       "<andes.system.System at 0x7f78594e96d0>"
       ]
      },
      "metadata": {},
@@ -458,9 +458,9 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<andes.system.System at 0x7f0a2e4fb4c0>,\n",
-       " <andes.system.System at 0x7f0aa0317d90>,\n",
-       " <andes.system.System at 0x7f0a2e4daf70>]"
+       "[<andes.system.System at 0x7f78594e96d0>,\n",
+       " <andes.system.System at 0x7f78594c9fa0>,\n",
+       " <andes.system.System at 0x7f78594d4a90>]"
       ]
      },
      "metadata": {},
@@ -599,7 +599,8 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "!andes misc -C"
+    "!andes misc -C\n",
+    "!rm -rf batch_cases"
    ],
    "outputs": [
     {
@@ -607,8 +608,8 @@
      "name": "stdout",
      "text": [
       "\n",
-      "    _           _         | Version 1.4.3.post10.dev0+g61fc831b\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 10/06/2021 09:04:35 AM\n",
+      "    _           _         | Version 1.4.3.post11.dev0+g66add67d\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 10/06/2021 09:05:50 AM\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\n",
       "\n",
