--- a/examples/demonstration/test_IEEEVC.ipynb
+++ b/examples/demonstration/test_IEEEVC.ipynb
@@ -21,12 +21,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Working directory: \"/Users/jinningwang/Documents/work/andes/examples/demonstration\"\n",
-      "Loaded config from file \"/Users/jinningwang/.andes/andes.rc\"\n",
-      "Loaded generated Python code in \"/Users/jinningwang/.andes/pycode\".\n",
-      "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_ieeevc.xlsx\"...\n",
-      "Input file parsed in 0.4172 seconds.\n",
-      "System internal structure set up in 0.0211 seconds.\n"
+      "Working directory: \"/home/hcui7/repos/andes/examples/demonstration\"\n",
+      "Loaded config from file \"/home/hcui7/.andes/andes.rc\"\n",
+      "Loaded generated Python code in \"/home/hcui7/.andes/pycode\".\n",
+      "Parsing input file \"/home/hcui7/repos/andes/andes/cases/ieee14/ieee14_ieeevc.xlsx\"...\n",
+      "Input file parsed in 0.3254 seconds.\n",
+      "System internal structure set up in 0.0195 seconds.\n"
      ]
     },
     {
@@ -73,31 +73,16 @@
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.967745825e-12\n",
-      "Converged in 4 iterations in 0.0080 seconds.\n",
-      "Suspect initialization issue! Simulation may crash!\n",
-      "\n",
-      "    Name     | Var. Value | Eqn. Mismatch\n",
-      "-------------+------------+--------------\n",
-      " vi IEEET1 1 | 0.294      | 0.025        \n",
-      "\n",
-      "\n",
-      "Initialization for dynamics completed in 0.0254 seconds.\n",
-      "Initialization failed!!\n"
+      "Converged in 4 iterations in 0.0051 seconds.\n",
+      "Initialization for dynamics completed in 0.0169 seconds.\n",
+      "Initialization was successful.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ss.PFlow.run()"
+    "ss.PFlow.run()\n",
+    "\n",
+    "xy = ss.TDS.init()"
    ]
   },
   {
@@ -109,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Algeb: IEEEVC.vcomp, a=[214], v=[0.02460921], e=[0.]\n",
-      "Algeb: IEEET1.vi, a=[210], v=[0.29427554], e=[0.02460921]\n"
+      "Algeb: IEEEVC.vcomp, a=[158], v=[0.02460921], e=[0.]\n",
+      "Algeb: IEEET1.vi, a=[216], v=[0.29427554], e=[0.]\n"
      ]
     }
    ],
@@ -128,8 +113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Algeb: IEEEVC.vcomp, a=[214], v=[0.02460921], e=[0.]\n",
-      "Algeb: IEEEVC.vcomp, a=[214], v=[0.02460921], e=[0.]\n"
+      "Algeb: IEEEVC.vcomp, a=[158], v=[0.02460921], e=[0.]\n",
+      "Algeb: IEEEVC.vcomp, a=[158], v=[0.02460921], e=[0.]\n"
      ]
     }
    ],
@@ -160,14 +145,14 @@
      "text": [
       "<Toggler Toggler_1>: Line.Line_1 status changed to 0 at t=1.0 sec.\n",
       "<Toggler Toggler_2>: Line.Line_1 status changed to 1 at t=1.1 sec.\n",
-      "100%|███████████████████████████████| 100/100 [00:00<00:00, 202.04%/s]"
+      "100%|███████████████████████████████| 100/100 [00:00<00:00, 261.85%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 0.4953 seconds.\n"
+      "Simulation completed in 0.3826 seconds.\n"
      ]
     },
     {
@@ -210,8 +195,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    _           _         | Version 1.4.4.post25+g39bd4f61\n",
-      "   /_\\  _ _  __| |___ ___ | Python 3.7.10 on Darwin, 10/08/2021 06:31:01 PM\n",
+      "    _           _         | Version 1.4.4.post38.dev0+g04df4b3b\n",
+      "   /_\\  _ _  __| |___ ___ | Python 3.9.6 on Linux, 10/09/2021 10:25:15 PM\n",
       "  / _ \\| ' \\/ _` / -_|_-< | \n",
       " /_/ \\_\\_||_\\__,_\\___/__/ | This program comes with ABSOLUTELY NO WARRANTY.\n",
       "\n",
@@ -226,10 +211,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b8c542af61804583455bb3cc02c5acff1b7eab71b36b048085e6e502c5a0f30d"
+   "hash": "491bc57f30212ab10e081de3c9da13bbea8cb936a32794256be1d301e32fe2dd"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('andes': conda)",
+   "display_name": "Python 3.9.6 64-bit ('a': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -242,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
