--- a/examples/ex11.ipynb
+++ b/examples/ex11.ipynb
@@ -53,8 +53,8 @@
       "Working directory: \"/Users/jinningwang/Documents/work/andes/examples\"\n",
       "Loaded generated Python code in \"/Users/jinningwang/.andes/pycode\".\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_ieeet1.xlsx\"...\n",
-      "Input file parsed in 0.1507 seconds.\n",
-      "System internal structure set up in 0.0317 seconds.\n"
+      "Input file parsed in 0.1511 seconds.\n",
+      "System internal structure set up in 0.0377 seconds.\n"
      ]
     },
     {
@@ -98,7 +98,7 @@
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.967745825e-12\n",
-      "Converged in 4 iterations in 0.0057 seconds.\n"
+      "Converged in 4 iterations in 0.0066 seconds.\n"
      ]
     },
     {
@@ -143,9 +143,8 @@
        "This pandapower network includes the following parameter tables:\n",
        "   - bus (14 elements)\n",
        "   - load (11 elements)\n",
-       "   - gen (4 elements)\n",
+       "   - gen (5 elements)\n",
        "   - shunt (2 elements)\n",
-       "   - ext_grid (1 element)\n",
        "   - line (16 elements)\n",
        "   - trafo (4 elements)"
       ]
@@ -174,8 +173,7 @@
    "source": [
     "# ssa\n",
     "ssa_res_gen = pd.DataFrame(columns=['name', 'p_mw', 'q_mvar', 'va_degree', 'vm_pu'])\n",
-    "\n",
-    "# ssa_res_gen['name'] = ssa.PV.name.v\n",
+    "ssa_res_gen['name'] = ssa.PV.as_df()['name']\n",
     "ssa_res_gen['p_mw'] = ssa.PV.p.v * ssa.config.mva\n",
     "ssa_res_gen['q_mvar'] = ssa.PV.q.v * ssa.config.mva\n",
     "ssa_res_gen['va_degree'] = ssa.PV.a.v * 180 / pi\n",
@@ -185,11 +183,11 @@
     "                              ssa.Slack.v.v[0]]],\n",
     "                             columns=ssa_res_gen.columns,\n",
     "                             )\n",
-    "ssa_res_gen = pd.concat([ssa_res_gen, ssa_res_slack])\n",
+    "ssa_res_gen = pd.concat([ssa_res_gen, ssa_res_slack]).reset_index(drop=True)\n",
     "\n",
     "# ssp\n",
     "pp.runpp(ssp)\n",
-    "ssp_res_gen = pd.concat([ssp.res_gen, ssp.res_ext_grid])\n",
+    "ssp_res_gen = pd.concat([ssp.gen['name'], ssp.res_gen], axis=1)\n",
     "\n",
     "pf_gen = pd.concat([ssa_res_gen, ssp_res_gen], axis=1)\n",
     "\n",
@@ -241,6 +239,7 @@
        "      <th>q_mvar</th>\n",
        "      <th>va_degree</th>\n",
        "      <th>vm_pu</th>\n",
+       "      <th>name</th>\n",
        "      <th>p_mw</th>\n",
        "      <th>q_mvar</th>\n",
        "      <th>va_degree</th>\n",
@@ -250,11 +249,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
        "      <td>40.0000</td>\n",
        "      <td>30.4361</td>\n",
        "      <td>-1.7641</td>\n",
        "      <td>1.03</td>\n",
+       "      <td>2</td>\n",
        "      <td>40.0000</td>\n",
        "      <td>30.4361</td>\n",
        "      <td>-1.7641</td>\n",
@@ -262,11 +262,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
        "      <td>40.0000</td>\n",
        "      <td>12.5971</td>\n",
        "      <td>-3.5371</td>\n",
        "      <td>1.01</td>\n",
+       "      <td>3</td>\n",
        "      <td>40.0000</td>\n",
        "      <td>12.5971</td>\n",
        "      <td>-3.5371</td>\n",
@@ -274,11 +275,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
        "      <td>30.0000</td>\n",
        "      <td>20.9866</td>\n",
        "      <td>-6.4527</td>\n",
        "      <td>1.03</td>\n",
+       "      <td>4</td>\n",
        "      <td>30.0000</td>\n",
        "      <td>20.9866</td>\n",
        "      <td>-6.4527</td>\n",
@@ -286,39 +288,48 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
        "      <td>35.0000</td>\n",
        "      <td>7.3964</td>\n",
        "      <td>-1.5400</td>\n",
        "      <td>1.03</td>\n",
+       "      <td>5</td>\n",
        "      <td>35.0000</td>\n",
        "      <td>7.3964</td>\n",
        "      <td>-1.5400</td>\n",
        "      <td>1.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>81.4272</td>\n",
        "      <td>-21.6171</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>1.03</td>\n",
+       "      <td>1</td>\n",
        "      <td>81.4272</td>\n",
        "      <td>-21.6171</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  name     p_mw   q_mvar  va_degree  vm_pu     p_mw   q_mvar  va_degree  vm_pu\n",
-       "0  NaN  40.0000  30.4361    -1.7641   1.03  40.0000  30.4361    -1.7641   1.03\n",
-       "1  NaN  40.0000  12.5971    -3.5371   1.01  40.0000  12.5971    -3.5371   1.01\n",
-       "2  NaN  30.0000  20.9866    -6.4527   1.03  30.0000  20.9866    -6.4527   1.03\n",
-       "3  NaN  35.0000   7.3964    -1.5400   1.03  35.0000   7.3964    -1.5400   1.03\n",
-       "0    1  81.4272 -21.6171     0.0000   1.03  81.4272 -21.6171        NaN    NaN"
+       "  name     p_mw   q_mvar  va_degree  vm_pu name     p_mw   q_mvar  va_degree  \\\n",
+       "0    2  40.0000  30.4361    -1.7641   1.03    2  40.0000  30.4361    -1.7641   \n",
+       "1    3  40.0000  12.5971    -3.5371   1.01    3  40.0000  12.5971    -3.5371   \n",
+       "2    4  30.0000  20.9866    -6.4527   1.03    4  30.0000  20.9866    -6.4527   \n",
+       "3    5  35.0000   7.3964    -1.5400   1.03    5  35.0000   7.3964    -1.5400   \n",
+       "4    1  81.4272 -21.6171     0.0000   1.03    1  81.4272 -21.6171     0.0000   \n",
+       "\n",
+       "   vm_pu  \n",
+       "0   1.03  \n",
+       "1   1.01  \n",
+       "2   1.03  \n",
+       "3   1.03  \n",
+       "4   1.03  "
       ]
      },
      "execution_count": 7,
